CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(STC)
PROJECT(DATA)
PROJECT(CLI)
PROJECT(SER)
include_directories (psk)
include_directories (web)
include_directories (./)
ADD_EXECUTABLE(STC test_modu.cpp psk/STCControl.cpp psk/PskMod.cpp psk/MatrixControl.cpp)
ADD_EXECUTABLE(DATA test_data.cpp)
ADD_EXECUTABLE(CLI client.cpp web/WebClient.cpp psk/PskMod.cpp psk/MatrixControl.cpp)
ADD_EXECUTABLE(SER server.cpp web/WebServer.cpp)
target_link_libraries(SER -lpthread)

